# mpgameserver

./: Makefile  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py
demo/: echoclient.py  echoserver.py  headlessclient.py  http.py  pong2_client.py  pong2_common.py  pong2_launcher.py  pong2_server.py  pong_client.py  pong_common.py  pong_server.py  shipclient.py  shipserver.py  simadventure.py  simplatform.py  simspace.py
demo/chat/: index.html  index.js  server.py
demo/old/: engine.py  shipcommon.py
docs/: GettingStarted.md  ProductionDeployment.md  client.md  crypto.md  engine.md  event_dispatch.md  example.md  example2.md  experimental.md  http.md  misc.md  network.md  serializable.md  server.md
mpgameserver/: __init__.py  __main__.py  auth.py  captcha.py  client.py  connection.py  context.py  crypto.py  dispatch.py  graph.py  guiserver.py  handler.py  http_client.py  http_server.py  logger.py  serializable.py  server.py  task.py  timer.py  twisted.py  util.py
mpgameserver/pylon/: __init__.py  engine.py  tilesheet.py
tests/: __main__.py  auth_test.py  captcha_test.py  client_test.py  connection_benchmark.py  connection_test.py  crypto_test.py  dispatch_test.py  http_test.py  serializable_test.py  server_test.py  task_test.py  timer_test.py  twisted_test.py  util_test.py
utils/: genmd.py
